2007-02-08  Naba Kumar  <naba@gnome.org>

	* plugins/editor/text_editor.h, plugins/editor/text_editor.c:
	Prevented spurious 'file modified' dialogs in scintilla editor
	when the file is saved.

2007-02-09  Johannes Schmid <jhs@gnome.org>

	* scripts/glade2schema.pl:
	Added script to convert glade preferences into gconf schema files.
	See #406061

2007-02-08  Naba Kumar  <naba@gnome.org>

	* src/anjuta-app.c: Destroy toolbar menuitem when the toolbar
	itself is destroyed. Fixes bug #355160.
	
2007-02-08  Johannes Schmid <jhs@gnome.org>

	* plugins/profiler/profiler.plugin: 
	removed from version control (only .in file needed)
	
	* plugins/sourceview/anjuta-view.c: (anjuta_view_init):
	* plugins/sourceview/sourceview.c: (sourceview_new):
	Code cleanup
	
	* plugins/subversion/svn-thread.c: (svn_thread_start):
	* src/main.c: (main):
	
	Fixed #395875 about initialisation of threads too late

2007-02-07  Armin Burgmeier  <armin@arbur.net>

	Reviewed by Naba Kumar  <naba@gnome.org>:
	* plugins/class-gen/plugin.c:
	* plugins/class-gen/window.c: Removed browse button related code, load
	generated output directly into new buffers when not adding to project.

	* plugins/class-gen/anjuta-class-gen-plugin.glade: Removed browse
	buttons from user interface.

2007-02-07  Naba Kumar  <naba@gnome.org>

	* po/POTFILES.in: Fixed distcheck.

2007-02-07  Daniel Nylander <po@danielnylander.se>

	* manuals/anjuta-manual/sv/sv.po: Added initial Swedish translation.

2007-02-07  Johannes Schmid <jhs@gnome.org>

	* anjuta.desktop.in.in:
	Fixed spelling

2007-02-07  Johannes Schmid <jhs@gnome.org>

	* configure.in:
	* manuals/anjuta-manual/*
	* manuals/anjuta-faqs/*:
	#398991 – Anjuta manuals does not use the gnome-doc-utils format
	
	* plugins/document-manager/anjuta-document-manager.plugin.in:
	Removed duplicate application-xml mime-type (review patches properly ;-)
	
2007-02-06 Sebastien Granjoux <seb.sfo@free.fr>

	* plugins/gdb/debugger.c,
	libanjuta/interfaces/libanjuta.idl: